--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- <link rel="stylesheet" href="//at.alicdn.com/t/font_692053_l0dr2cc0fl.css"> -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale= 1.0, minimum-scale=1.0">
-    <title>jckj-app-h5</title>
+    <title>whale-mall-h5</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but jckj-app-h5 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but whale-mall-h5 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
