--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,23 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale= 1.0, minimum-scale=1.0">
+  <% if (process.env.NODE_ENV === 'production') { %>
+  <% for(var js of htmlWebpackPlugin.options.cdn.js) { %>
+  <link href="<%=js%>" rel="preload" as="script">
+  <script src="<%=js%>"></script>
+  <% } %>
+  <% } else{ %>
+  <script src="https://cdn.bootcss.com/vue/2.6.10/vue.js"></script>
+  <script src="https://cdn.bootcss.com/vuex/3.1.1/vuex.js"></script>
+  <script src="https://cdn.bootcss.com/vue-router/3.1.3/vue-router.js"></script>
+  <script src="https://cdn.bootcss.com/axios/0.19.0/axios.js"></script>
+  <% } %>
   <title>链猫商城</title>
 </head>
 
 <body>
   <div id="app"></div>
+  <!-- built files will be auto injected -->
 </body>
 
 </html>
