--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale= 1.0, minimum-scale=1.0">
   <% if (process.env.NODE_ENV === 'production') { %>
+
+  <% for(var css of htmlWebpackPlugin.options.cdn.css) { %>
+  <link href="<%=css%>" rel="preload" as="style">
+  <link rel="stylesheet" href="<%=css%>" as="style">
+  <% } %>
+
   <% for(var js of htmlWebpackPlugin.options.cdn.js) { %>
   <link href="<%=js%>" rel="preload" as="script">
   <script src="<%=js%>"></script>
@@ -21,7 +27,8 @@
   <script src="https://cdn.bootcss.com/vuex/3.1.1/vuex.js"></script>
   <script src="https://cdn.bootcss.com/vue-router/3.1.3/vue-router.js"></script>
   <script src="https://cdn.bootcss.com/axios/0.19.0/axios.js"></script>
-  <% } %>
+  <script src="https://cdn.jsdelivr.net/npm/vue-awesome-swiper@3.1.3/dist/vue-awesome-swiper.min.js"></script>
+   <% } %>
   <title>链猫商城</title>
 </head>
 
