--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
   <script src="https://cdn.bootcss.com/vuex/3.1.1/vuex.js"></script>
   <script src="https://cdn.bootcss.com/vue-router/3.1.3/vue-router.js"></script>
   <script src="https://cdn.bootcss.com/axios/0.19.0/axios.js"></script>
+  <script src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue-awesome-swiper@3.1.3/dist/vue-awesome-swiper.min.js"></script>
    <% } %>
   <title>链猫商城</title>
