--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
   <script src="https://cdn.bootcss.com/axios/0.19.0/axios.js"></script>
   <script src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue-awesome-swiper@3.1.3/dist/vue-awesome-swiper.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@2.2.1/lib/index.css">
+  <script src="https://cdn.jsdelivr.net/npm/vant@2.2.1/lib/vant.min.js"></script>
    <% } %>
   <title>链猫商城</title>
 </head>
