--- a/public/index.html
+++ b/public/index.html
@@ -12,31 +12,20 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale= 1.0, minimum-scale=1.0">
   <% if (process.env.NODE_ENV === 'production') { %>
-
   <% for(var css of htmlWebpackPlugin.options.cdn.css) { %>
   <link href="<%=css%>" rel="preload" as="style">
   <link rel="stylesheet" href="<%=css%>" as="style">
   <% } %>
-
   <% for(var js of htmlWebpackPlugin.options.cdn.js) { %>
   <link href="<%=js%>" rel="preload" as="script">
   <script src="<%=js%>"></script>
   <% } %>
-  <% } else{ %>
-  <script src="https://cdn.bootcss.com/vue/2.6.10/vue.js"></script>
-  <script src="https://cdn.bootcss.com/vuex/3.1.1/vuex.js"></script>
-  <script src="https://cdn.bootcss.com/vue-router/3.1.3/vue-router.js"></script>
-  <script src="https://cdn.bootcss.com/axios/0.19.0/axios.js"></script>
-  <script src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue-awesome-swiper@3.1.3/dist/vue-awesome-swiper.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@2.2.1/lib/index.css">
-  <script src="https://cdn.jsdelivr.net/npm/vant@2.2.1/lib/vant.min.js"></script>
-   <% } %>
+  <% } %>
   <title>链猫商城</title>
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app"><!-- shell --></div>
   <!-- built files will be auto injected -->
 </body>
 
